<resources>
    <!--
        Todo el texto del proyecto está aquí y la estructura es Etiqueta_Nombre_Complemento
        Ctrl+R para buscar el texto si te da flojera
     -->
    <string name="app_name">Planificador de Eventos</string>
    <string name="title_main">¡BIENVENIDO A TU\n PLANIFICADOR DE EVENTOS!</string>
    <string name="lb_email">Correo:</string>
    <string name="hint_email">Correo@ejemplo.com</string>
    <string name="lb_name">Nombre:</string>
    <string name="hint_name">Nombre</string>
    <string name="lb_password">Contraseña:</string>
    <string name="hint_password">Contraseña</string>
    <string name="lb_repeat_password">Confirmar contraseña:</string>
    <string name="hint_repeat_password">Contraseña</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_sign_in">Iniciar sesión</string>
    <string name="btn_no_account_register"><u>¿Aún no tienes una cuenta? ¡Regístrate aquí!</u></string>
    <string name="title_signup">¡REGÍSTRATE CON NOSOTROS! :D</string>
    <string name="title_create_event">CREA TU \n EVENTO :3</string>
    <string name="hint_create_event">Evento Solsticio</string>
    <string name="lb_event_name">Nombre del evento:</string>
    <string name="lb_event_budget">Presupuesto (Estimado) del\nevento:</string>
    <string name="hint_estimated_budget">30000</string>
    <string name="lb_event_description">Descripción del evento (opcional):</string>
    <string name="hint_event_description">Divertido!</string>
    <string name="lb_optional">(Opcional)</string>
    <string name="lb_event_type">Tipo de evento:</string>
    <string name="title_account_config">CONFIGURACIÓN DE\nLA CUENTA</string>
    <string name="btn_edit_profile">Cambiar Correo</string>
    <string name="btn_signout"><u>Cerrar Sesión</u></string>
    <string name="btn_change_password">Cambiar contraseña</string>
    <string name="title_budget">Presupuesto estimado</string>
    <string name="sym_money">$</string>
    <string name="title_list_task">Lista de tareas</string>
    <string name="btn_task">Tareas</string>
    <string name="btn_subtask">Subtareas</string>
    <string name="btn_event_overview">Resumen del evento</string>
    <string name="btn_price_comparation">Comparación de precios:</string>
    <string name="title_subtask">Subtareas de:</string>
    <string name="title_create_task">CREA UNA NUEVA\n TAREA</string>
    <string name="lb_task_name">Nombre de la tarea:</string>
    <string name="lb_task_description">Descripción de la tarea:</string>
    <string name="lb_subtask_description">Descripción de la subtarea:</string>
    <string name="lb_task_budget">Presupuesto (estimado) de la tarea:</string>
    <string name="title_price_comparation">COMPARACIÓN DE PRECIOS</string>
    <string name="lb_item_name">Nombre del artículo:</string>
    <string name="lb_place">Lugar:</string>
    <string name="lb_cost">Costo:</string>
    <string name="title_event_overview">RESUMEN DEL EVENTO</string>
    <string name="lb_estimated_budget">Presupuesto estimado</string>
    <string name="lb_real_budget">Presupuesto real</string>
    <string name="title_cost_comparative">Comparativa de costos</string>
    <string name="btn_place_list">Listado de lugares</string>
    <string name="btn_event_estadistic"><u>Ver estadisticas del evento</u></string>
    <string name="eg_event_name">Fiesta de Bell</string>
    <string name="eg_event_budget">100000</string>
    <string name="eg_event_category">Fiesta</string>
    <string name="eg_task">Tarea</string>
    <string name="eg_subtask">Sub tarea</string>
    <string name="event_title">Estadisticas del evento</string>
    <string name="global_comparative">Comparativa global</string>
    <string name="choose_supplier">Elige a tu proveedor</string>
    <string name="list_places">Listado de los lugares donde se adquirieron los artículos o servicios</string>
    <string name="sale_point">Punto de venta</string>
    <string name="sale_point_name">Globitos Maria</string>
    <string name="sale_point_cost">500</string>
    <string name="msg_password_dont_match">Las contraseñas no coinciden</string>
    <string name="supplier_name">Tacos pepillo</string>


    <!-- este es el de las tareas y subtareas -->
    <string name="proveedor">Proveedores</string>
    <string name="hint_task_description">Descripción</string>
    <string name="hint_task_budget">Presupuesto</string>
    <string name="lb_newtask_budget">Presupuesto:</string>
    <string name="title_create_subtask">CREA UNA NUEVA\n SUBTAREA</string>
    <string name="lb_subtask_name">Nombre de la Subtarea:</string>
    <string name="et_subtask_name">Subtarea</string>
    <string name="btn_register_subtask">Registrar</string>
    <string name="title_create_provider">AGREGA UN NUEVO\n PROVEEDOR PARA</string>
    <string name="lb_provider_name">Nombre del proveedor:</string>
    <string name="hint_provider_name">Nombre del proveedor</string>
    <string name="lb_product_price">Precio del producto:</string>
    <string name="hint_product_price">Precio del producto</string>
    <string name="lb_provider_example">Platos</string>
    <string name="lb_comparative_example">Platos:</string>

    <!-- Kat / Perfil -->
    <string name="name_profile">Nombre:</string>
    <string name="hint_name_profile">Default.</string>
    <string name="email_profile">Correo electrónico:</string>
    <string name="email_new">Nuevo correo:</string>
    <string name="hint_email_profile">example@gmail.com</string>
    <string name="button_save">Guardar</string>
    <string name="title_password">Cambiar\nContraseña</string>
    <string name="lb_new_password">Nueva contraseña:</string>
    <string name="lb_old_password">Contraseña anterior:</string>
    <string name="hint_new_password">********</string>
    <string name="hint_old_password">***</string>
    <string name="send">Enviar</string>
    <string name="email_changepassword">Se enviara un correo para cambiar su contraseña</string>

    <!-- Momez / detalles de la subtarea gad -->
    <string name="title_subtask_detail">Detalles de la subtarea</string>
    <string name="eg_title_subtask">Subtarea</string>
    <string name="title_subtask_description">Descripción:</string>
    <string name="eg_text_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="btn_add_supplier">Agregar proveedor</string>
    <!-- Proveedor, corrige eso-->

    <!-- Manuel / Estadisticas -->
    <string name="local">Local</string>
    <string name="mesas">Mesas</string>
    <string name="comida">Comida</string>
    <string name="musica">Musica</string>
    <string name="total">Total</string>


</resources>
