<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beigeLight"
    android:padding="@dimen/margin_low"
    tools:context=".TaskCreation">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:name="equipo5.proyectofinal.planificadordeeventos.HeaderEmptyFragment"
        tools:layout="@layout/fragment_header_empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_task"
            android:textSize="@dimen/title_size"
            android:textColor="@color/orange"
            android:fontFamily="@string/typo_title"
            android:textStyle="bold"
            android:padding="@dimen/margin_low" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/margin_low"
            android:layout_gravity="center_vertical"
            android:src="@drawable/globos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_low">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_task_name"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:background="@android:color/white"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_task_description"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_description"
            android:background="@android:color/white"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_task_budget"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_task_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_budget"
            android:background="@android:color/white"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:background="@drawable/btn_background"
        android:textColor="@color/beigeLight"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_low" />
</LinearLayout>