<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/beigeLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:name="equipo5.proyectofinal.planificadordeeventos.HeaderEmptyFragment"
        tools:layout="@layout/fragment_header_empty"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="@dimen/title_sign_up_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/title_signup"
            android:textSize="@dimen/title_size"
            android:textColor="@color/orange"
            android:fontFamily="@string/typo_title"
            tools:ignore="RtlCompat"
            />

        <ImageView
            android:layout_width="@dimen/img_cat_width"
            android:layout_height="@dimen/img_cat_height"
            android:layout_marginLeft="@dimen/margin_normal"
            android:src="@drawable/gatoglobo"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@string/typo_normal_text"
        android:text="@string/lb_name"
        android:textSize="@dimen/text_size"
        android:paddingLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_low"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@string/typo_normal_text"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:background="@drawable/btn_border"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@string/typo_normal_text"
        android:text="@string/lb_email"
        android:textSize="@dimen/text_size"
        android:paddingStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_low"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@string/typo_normal_text"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/btn_border"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@string/typo_normal_text"
        android:text="@string/lb_password"
        android:textSize="@dimen/text_size"
        android:paddingLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_low"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@string/typo_normal_text"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:background="@drawable/btn_border"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@string/typo_normal_text"
        android:text="@string/lb_repeat_password"
        android:textSize="@dimen/text_size"
        android:paddingStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_low"
        />

    <EditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@string/typo_normal_text"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:hint="@string/hint_repeat_password"
        android:inputType="textPassword"
        android:background="@drawable/btn_border"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:textColor="@color/beigeLight"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/btn_register"
        android:layout_marginTop="@dimen/margin_low"
        />

</LinearLayout>