<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beigeLight"
    tools:context=".AddTask">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:name="equipo5.proyectofinal.planificadordeeventos.HeaderProfile"
        tools:layout="@layout/fragment_header_profile"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/margin_low">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_task"
            android:textSize="@dimen/title_size"
            android:textColor="@color/orange"
            android:fontFamily="@string/typo_title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="@dimen/margin_low" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/margin_low"
            android:layout_gravity="center_vertical"
            android:src="@drawable/globos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- mira ruzz estos de aqui abajo son
        los que vas a copiar y a pegar, cambiando
        el id del EditText y asi queada bonito-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/typo_normal_text"
            android:text="@string/lb_task_name"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_low"
            android:textStyle="bold"
            android:textColor="@color/black"
            />



        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@string/typo_normal_text"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:background="@drawable/btn_border"
            />

        <TextView
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/typo_normal_text"
            android:hint="@string/title_subtask_description"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_low"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_task_description"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@string/typo_normal_text"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:hint="@string/hint_task_description"
            android:inputType="text"
            android:background="@drawable/btn_border"/>

        <TextView
            android:hint="@string/lb_newtask_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/typo_normal_text"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_low"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <EditText
            android:id="@+id/et_task_budget"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@string/typo_normal_text"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:hint="@string/hint_task_budget"
            android:inputType="numberDecimal"
            android:background="@drawable/btn_border"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:background="@drawable/btn_background"
        android:textColor="@color/beigeLight"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_low" />
</LinearLayout>
