<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetail">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:name="equipo5.proyectofinal.planificadordeeventos.HeaderProfile"
        tools:layout="@layout/fragment_header_profile"
        />

    <TextView
        android:id="@+id/event_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size_max"
        android:text="@string/eg_event_name"
        android:fontFamily="@string/typo_normal_text"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/btn_event_estadistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/low_size"
        android:text="@string/btn_event_estadistic"
        android:textColor="@color/orange_red"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/postit_background"
        android:orientation="vertical"
        android:padding="@dimen/margin_low"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_budget"
            android:textAlignment="center"
            android:textSize="@dimen/title_size"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sym_money"
                android:textSize="@dimen/title_size"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:text="@string/eg_event_budget"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/postit_background"
        android:orientation="vertical"
        android:padding="@dimen/margin_low"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_normal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_list_task"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/margin_low"
            />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

</LinearLayout>