<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beigeLight"
    tools:context=".AddSupplier">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:name="equipo5.proyectofinal.planificadordeeventos.HeaderEmptyFragment"
        tools:layout="@layout/fragment_header_profile" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_provider"
            android:textSize="@dimen/title_size"
            android:textColor="@color/orange"
            android:paddingStart="35dp"

            android:fontFamily="@string/typo_title"
            android:textStyle="bold"
            android:padding="@dimen/margin_low" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/margin_low"
            android:layout_gravity="center_vertical"
            android:src="@drawable/globos" />
    </LinearLayout>

    <!-- Espacio vacío donde se traerá
    el nombre del proveedor
    -->

    <TextView
        android:id="@+id/et_provider_name_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_provider_example"
        android:textSize="@dimen/title_size_max"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_low">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/typo_normal_text"
            android:text="@string/lb_provider_name"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_low"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_provider_name"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/hint_provider_name"
            android:fontFamily="@string/typo_normal_text"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:background="@drawable/btn_border"
            android:inputType="textPersonName"
         />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_product_price"
            android:textSize="@dimen/text_size"
            android:fontFamily="@string/typo_normal_text"
            android:paddingLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_low"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_product_price"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/hint_product_price"
            android:fontFamily="@string/typo_normal_text"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:inputType="numberDecimal"
            android:background="@drawable/btn_border"/>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:background="@drawable/btn_background"
        android:textColor="@color/beigeLight"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_low" />
</LinearLayout>